@@ -269,6 +269,24 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the background image
+        ///
+        /// @param texture  New background texture
+        ///
+        /// When this image is set, the background color property will be ignored.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setTextureBackground(const Texture& texture);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the background image
+        ///
+        /// @return background texture
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Texture& getTextureBackground() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Sets the renderer data of the optional close button
         ///
         /// @param rendererData  Data about how the close button should look
