@@ -100,6 +100,24 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Changes the background image
+        ///
+        /// @param texture  New background texture
+        ///
+        /// When this image is set, the background color property will be ignored.
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        void setTextureBackground(const Texture& texture);
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the background image
+        ///
+        /// @return background texture
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        Texture& getTextureBackground() const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
     };
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
