@@ -5,6 +5,7 @@ TGUI 0.8.6  (TBD)
 - Added getSelectionStart and getSelectionEnd functions to TextBox
 - Added mousePressed and mouseReleased to respond to different mouse buttons in custom widgets
 - Added focusable property to widgets
+- Added TextureBackground property to Panel and ChildWindow renderers
 
 
 TGUI 0.8.5  (6 April 2019)
